--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.19.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
