--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "dotenv -e .env.local next dev",
+    "dev:prod": "dotenv -e .env.prod next dev",
     "build": "next build",
+    "build:local": "dotenv -e .env.local next build",
+    "build:prod": "dotenv -e .env.prod next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.1.0",
+    "@sanity/client": "^6.21.0",
+    "@sanity/image-url": "^1.0.2",
     "@tanstack/react-table": "^8.19.2",
+    "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
