--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
