--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.4",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
